--- a/build-extras-onesignal.gradle
+++ b/build-extras-onesignal.gradle
@@ -11,6 +11,8 @@ buildscript {
     repositories {
         // ...
         maven { url 'https://maven.fabric.io/public' }
+        google()
+        jcenter()
     }
     dependencies {
         // ...
